<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
  android:id="@+id/displayerAttachableView"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:orientation="vertical"
  android:paddingTop="@dimen/content_padding_top">

  <ImageView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center_horizontal"
    android:layout_marginBottom="@dimen/content_margin_bottom"
    android:contentDescription="@string/merlin_logo"
    android:src="@mipmap/ic_launcher" />

  <Button
    android:id="@+id/current_status"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center_horizontal"
    android:text="@string/current_status" />

  <Button
    android:id="@+id/wifi_connected"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center_horizontal"
    android:text="@string/is_wifi_connected" />

  <Button
    android:id="@+id/mobile_connected"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center_horizontal"
    android:text="@string/is_mobile_connected" />

  <Button
    android:id="@+id/network_subtype"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center_horizontal"
    android:text="@string/get_network_subtype" />

  <Button
    android:id="@+id/has_internet_access"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center_horizontal"
    android:text="@string/has_internet_access" />

  <Button
    android:id="@+id/next_activity"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center_horizontal"
    android:text="@string/next_activity" />

</LinearLayout>
